--- a/client/src/components/styles/dash/CreateEventAdmin.css
+++ b/client/src/components/styles/dash/CreateEventAdmin.css
@@ -10,11 +10,12 @@
 
 
 .background-image {
-    background-image: url('../../../assets/brown-blue-wood.jpg'); /* Replace with your image path */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh; /* This makes sure that the div takes the full viewport height */
-    width: 100%;
+  background-image: url('../../../assets/brown-blue-wood.jpg'); /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  min-height: 100vh; /* This makes sure that the div takes the full viewport height */
+  width: 100%;
   }
 
