--- a/client/src/components/styles/client/VenueList.css
+++ b/client/src/components/styles/client/VenueList.css
@@ -47,9 +47,11 @@ a, a:hover {
 
 #pageHeaderTitle {
 	margin: 2rem 0;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	text-align: center;
 	font-size: 2.5rem;
+  font-family: 'Stoke';
+  text-shadow: 0px 2px 16px #12110f;
 }
 
 /* Cards */
@@ -83,6 +85,7 @@ a, a:hover {
 		margin-bottom: 0.5rem;
 		font-weight: 500;
 		line-height: 1.2;
+    margin-left: 0.2rem;
 	}
 	
 	.small {
@@ -103,6 +106,15 @@ a, a:hover {
   .postcard__img_link {
     display: contents;
   }
+  .postcard__text, .postcard__text h1, .postcard__text .small {
+    font-family: 'Stoke', serif; /* Change to your preferred font */
+    /* Rest of your styles */
+    
+}
+.postcard__preview-txt {
+  font-family: 'Forum';
+}
+
 
   .postcard__bar {
     width: 50px;
@@ -125,6 +137,9 @@ a, a:hover {
     text-overflow: ellipsis;
     text-align: justify;
     height: 100%;
+  }
+  .postcard__subtitle {
+    margin-top: 20px;
   }
 
   .postcard__tagbox {
@@ -187,7 +202,7 @@ a, a:hover {
     }
 
     .postcard__text {
-      padding: 3rem;
+      padding: 3rem 3rem 1rem 3rem;
       width: 100%;
     }
 
