--- a/client/src/components/styles/dash/CreateEventAdmin.css
+++ b/client/src/components/styles/dash/CreateEventAdmin.css
@@ -5,17 +5,36 @@
     height: 100%;
   } */
   .create-form-text {
-    color: rgb(231, 220, 220);
+    color: #FCD46A;
+    font-family: 'Stoke';
+    margin-top: 10px;
+    text-shadow: 0px 2px 16px #12110f;
   }
-
+  .background-image .form-control {
+    background-color: #201e19; /* Replace #yourColor with your desired color */
+  }
+  .background-image .form-control::placeholder {
+    color: #d8a830; /* Replace #yourColor with your desired color */
+  }
+  .background-image .form-control {
+    color: #d8a830; /* Replace #yourColor with your desired color */
+  }
+  
 
 .background-image {
-  background-image: url('../../../assets/brown-blue-wood.jpg'); /* Replace with your image path */
+  background-image: url('../../../assets/brown-blue-wood.jpg'); 
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  min-height: 100vh; /* This makes sure that the div takes the full viewport height */
+  min-height: 100vh; 
   width: 100%;
+  }
+
+  .center-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 
