--- a/client/src/components/styles/dropdowns/DateDropdown.css
+++ b/client/src/components/styles/dropdowns/DateDropdown.css
@@ -9,7 +9,10 @@
     color: #333;
     font-size: 16px; /* Easy to read */
     margin-bottom: 10px; /* Spacing between dropdowns */
+    background-color: #201e19; /* Replace #yourColor with your desired color */
+    color: #FCD46A;
 }
+
 
 /* Hover effect */
 .date-dropdown:hover {
@@ -27,4 +30,46 @@
 .dropdown-container {
     max-width: 300px; /* Adjust as needed */
     margin: auto;
+}
+
+.date-dropdown-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Adjust the space between rows and items */
+}
+
+.date-dropdown-row {
+    display: flex;
+    justify-content: space-between; /* This will space the two dropdowns evenly */
+    width: 100%; /* Full width */
+    margin-bottom: 10px; /* Spacing between rows */
+}
+
+.date-dropdown {
+    flex-basis: calc(50% - 5px); /* Adjusts the width of each dropdown */
+    /* ... rest of your styles */
+}
+
+.duration-dropdown-container {
+    display: flex;
+    justify-content: center; /* This centers the child horizontally */
+    margin-bottom: 10px; /* Add some space below */
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.duration-dropdown {
+    width: auto; /* Or you can set a specific width */
+    /* Other styling properties similar to .date-dropdown */
+    padding: 8px 12px;
+    border: 1px solid #ccc; /* Subtle border */
+    border-radius: 5px; /* Rounded corners for a modern look */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+    background-color: white;
+    color: #333;
+    font-size: 16px; /* Easy to read */
+    margin-bottom: 10px; /* Spacing between dropdowns */
+    background-color: #201e19; /* Replace #yourColor with your desired color */
+    color: #FCD46A;
 }
