added validation for creation

--- a/client/src/components/styles/dash/CreateEventAdmin.css
+++ b/client/src/components/styles/dash/CreateEventAdmin.css
@@ -28,6 +28,10 @@ input[type="date"]:-webkit-autofill {
   .background-image .form-control {
     color: #d8a830; /* Replace #yourColor with your desired color */
   }
+  .error-message {
+    font-family: 'Stoke';
+    color: #FCD46A;
+  }
   
 
 .background-image {
