--- a/client/src/components/styles/client/MyEventsList.css
+++ b/client/src/components/styles/client/MyEventsList.css
@@ -7,18 +7,24 @@
     gap: 10px;
 }
 .my-events-btn-container Button {
-    background-color: #486F7B;
+    background: linear-gradient(0deg, rgb(36, 149, 134) 0%,  rgb(36, 99, 148) 72%);
+    /* background: linear-gradient(0deg, rgba(29,121,109,1) 0%,  rgba(29,81,121,1) 72%); */
+   
+    
     color: black;
 }
 .my-events-btn-container Button:hover {
-    background-color: #5b8c9b;
+        background: linear-gradient(0deg, rgba(29,121,109,1) 0%,  rgba(29,81,121,1) 72%);
+
     color: black;
 }
 .my-events-btn-container :nth-child(2) {
-    background-color: #D90368;
+    background: linear-gradient(0deg, rgba(235,164,77,1) 0%, rgba(217,3,104,1) 72%);
+
+    /* background: #D90368; */
     color: black;
 }
 .my-events-btn-container :nth-child(2):hover {
-    background-color: #f20573;
+    background: linear-gradient(0deg, rgb(210, 146, 69) 0%, rgb(188, 3, 89) 72%);
     color: black;
 }
