--- a/client/src/components/styles/dropdowns/VenueDropdown.css
+++ b/client/src/components/styles/dropdowns/VenueDropdown.css
@@ -1,5 +1,5 @@
 :root {
-    --arrow-bg: rgba(55, 145, 197, 0.668);
+    --arrow-bg: rgba(19, 50, 73, 0.844);;
     --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
     --option-bg: rgb(43, 211, 220);
     --select-bg: rgba(244, 225, 79, 0.66);
