--- a/client/src/components/styles/dropdowns/VenueDropdown.css
+++ b/client/src/components/styles/dropdowns/VenueDropdown.css
@@ -9,7 +9,7 @@
   }
 
   /* <select> styles */
-   select {
+  .venue-dropdown-container select {
     /* Reset */
     appearance: none;
     border: 0;
