--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Forum&family=Quattrocento&family=Stoke:wght@300;400&display=swap');
 .navbar-background {
-    background-color: #133249; /* Dark blue color */
-}
+    background: linear-gradient(0deg, rgba(35,94,128,1) 9%, rgba(22,50,75,1) 68%);}
 #navBrand {
     color: #FCD46A;
+    font-family: 'Stoke';
+}
+#navBrand:hover {
+    color: #82B3AD;
     font-family: 'Stoke';
 }
 .nav_bar_link {
