--- a/client/src/components/styles/client/UpcomingEvents.css
+++ b/client/src/components/styles/client/UpcomingEvents.css
@@ -8,6 +8,16 @@
     flex-grow: 1;
     text-align: center;
 }
+
+.upcoming-small-details {
+    display: flex;
+    gap: 30px;
+    
+}
+
+.upcoming-details-cont {
+    
+}
 .no-events-center {
     display: flex;
     justify-content: center;
