--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -17,7 +17,7 @@
     color: #82B3AD; ;
 }
 .navbar-nav .nav_bar_link.active {
-    color: #ffffff; /* This sets the color to white */
+    color: #ffffff; 
 }
 
 
