--- a/client/src/components/styles/client/ServiceList.css
+++ b/client/src/components/styles/client/ServiceList.css
@@ -54,7 +54,7 @@
 .blog-card {
     width: 350px;
     height: 500px;
-    position: relative; /* Changed from absolute */
+    position: relative; 
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
@@ -66,9 +66,7 @@
     
   }
 
-/* .blog-card.spring-fever {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/bg-blog-card.jpg) no-repeat;
-} */
+
 
 /* Color overlay styles */
 .color-overlay {
