--- a/client/src/components/styles/DashboardEvents.css
+++ b/client/src/components/styles/DashboardEvents.css
@@ -1,5 +1,5 @@
 .chip-link {
-    background-color: #133249; /* Dark blue color */
+    background-color: #133249; 
     color: #FCD46A;
     padding: 5px 10px;
     border-radius: 15px;
@@ -7,24 +7,26 @@
     margin-right: 5px;
     text-decoration: none; /* Remove underline from links */
     display: inline-block; /* Make sure links are inline for text-align to work */
-    margin: 5px; /* Adjust spacing around each chip */
+    margin: 5px; /* spacing around each chip */
 }
 
-/* Optional: Style for hover effect */
+
 .chip-link:hover {
-    background-color: #061119; /* Darker shade for hover effect */
+    background-color: #061119; 
 }
 
 .centered-content {
     text-align: center;
-    margin-bottom: 15px; /* Adjust as needed */
+    margin-bottom: 15px; 
 }
 .left-align-btn {
     padding-left: 15px;
     margin-bottom: 10px;
+    
 }
 .admin-event-btn {
     background-color: #316878;
+    margin-right: 20px;
 }
 .admin-event-btn:hover {
 background-color: #133249;
