--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -3,7 +3,7 @@
     mask-image: radial-gradient(circle, white, black);
 }
 .rounded-image {
-    border-radius: 35px; /* Adjust the px value to increase or decrease the roundness */
+    border-radius: 35px; 
 }
 
 .home-container h2, p {
