--- a/client/src/components/styles/client/MyEventsList.css
+++ b/client/src/components/styles/client/MyEventsList.css
@@ -14,6 +14,9 @@
     
     color: black;
 }
+.my-events-details {
+    
+}
 .my-events-btn-container Button:hover {
         background: linear-gradient(0deg, rgba(29,121,109,1) 0%,  rgba(29,81,121,1) 72%);
 
