--- a/client/src/components/styles/client/VenueList.css
+++ b/client/src/components/styles/client/VenueList.css
@@ -26,12 +26,12 @@ body {
 }
 
 .venue-background-image {
-    background-image: url('../../../assets/brown-blue-wood.jpg'); /* Replace with your image path */
+    background-image: url('../../../assets/brown-blue-wood.jpg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    min-height: 100vh; /* This makes sure that the div takes the full viewport height */
+    min-height: 100vh; 
     width: 100%;
 }
 
