--- a/client/src/components/styles/dropdowns/DateDropdown.css
+++ b/client/src/components/styles/dropdowns/DateDropdown.css
@@ -1,75 +1,75 @@
 /* Base styles for the dropdowns */
 .date-dropdown {
-    width: 100%; /* Responsive width */
+    width: 100%; 
     padding: 8px 12px;
-    border: 1px solid #ccc; /* Subtle border */
-    border-radius: 5px; /* Rounded corners for a modern look */
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
     background-color: white;
     color: #333;
-    font-size: 16px; /* Easy to read */
+    font-size: 16px; 
     margin-bottom: 10px; /* Spacing between dropdowns */
-    background-color: #201e19; /* Replace #yourColor with your desired color */
+    background-color: #201e19; 
     color: #FCD46A;
 }
 
 
 /* Hover effect */
 .date-dropdown:hover {
-    border-color: #888; /* Slightly darker border on hover */
+    border-color: #888; 
 }
 
 /* Focus effect */
 .date-dropdown:focus {
     outline: none;
-    border-color: #0056b3; /* Stand-out border color for focus */
-    box-shadow: 0 0 0 2px rgba(0, 86, 179, 0.2); /* Additional shadow for focus */
+    border-color: #0056b3; 
+    box-shadow: 0 0 0 2px rgba(0, 86, 179, 0.2); 
 }
 
-/* Optional: Style for the container to align the dropdowns nicely */
+
 .dropdown-container {
-    max-width: 300px; /* Adjust as needed */
+    max-width: 300px; 
     margin: auto;
 }
 
 .date-dropdown-wrapper {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px; /* Adjust the space between rows and items */
+    gap: 10px; 
 }
 
 .date-dropdown-row {
     display: flex;
-    justify-content: space-between; /* This will space the two dropdowns evenly */
-    width: 100%; /* Full width */
-    margin-bottom: 10px; /* Spacing between rows */
+    justify-content: space-between; 
+    width: 100%; 
+    margin-bottom: 10px; 
 }
 
 .date-dropdown {
-    flex-basis: calc(50% - 5px); /* Adjusts the width of each dropdown */
-    /* ... rest of your styles */
+    flex-basis: calc(50% - 5px); 
+   
 }
 
 .duration-dropdown-container {
     display: flex;
-    justify-content: center; /* This centers the child horizontally */
-    margin-bottom: 10px; /* Add some space below */
+    justify-content: center; 
+    margin-bottom: 10px; 
     flex-direction: column;
     align-items: center;
 
 }
 
 .duration-dropdown {
-    width: auto; /* Or you can set a specific width */
-    /* Other styling properties similar to .date-dropdown */
+    width: auto; 
+    
     padding: 8px 12px;
-    border: 1px solid #ccc; /* Subtle border */
-    border-radius: 5px; /* Rounded corners for a modern look */
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
     background-color: white;
     color: #333;
-    font-size: 16px; /* Easy to read */
-    margin-bottom: 10px; /* Spacing between dropdowns */
-    background-color: #201e19; /* Replace #yourColor with your desired color */
+    font-size: 16px; 
+    margin-bottom: 10px; 
+    background-color: #201e19; 
     color: #FCD46A;
 }
