--- a/client/src/components/styles/DashboardEvents.css
+++ b/client/src/components/styles/DashboardEvents.css
@@ -18,6 +18,13 @@
 .centered-content {
     text-align: center;
     margin-bottom: 15px; 
+    
+}
+.centered-content h3 {
+    font-family: 'Stoke';
+    color: #FCD46A;
+    padding-top: 3rem;
+    font-size: 2.5rem;
 }
 .left-align-btn {
     padding-left: 15px;
@@ -30,6 +37,32 @@
 }
 .admin-event-btn:hover {
 background-color: #133249;
+}
+.admin-service-btn {
+    background-color: #316878;
+    margin-top: 10px;
+}
+.admin-service-btn:hover {
+    background-color: #133249;
+    margin-top: 10px;
+}
+.admin-cancel-btn {
+    background-color: #ffc107;
+    color: black;
+}
+.admin-cancel-btn:hover {
+    background-color: #dda706;
+    color: black;
+}
+.pending-btn {
+    background: linear-gradient(0deg, rgba(235,164,77,1) 0%, rgba(217,3,104,1) 72%);
+    border: none;
+    
+}
+.pending-btn:hover {
+    background: linear-gradient(0deg, rgb(189, 132, 62) 0%, rgb(172, 2, 82) 72%);
+    border: none;
+    margin-right: 20px;
 }
 .admin-reject-btn {
     background-color: #8fcf4f;
