--- a/client/src/components/styles/DashboardEvents.css
+++ b/client/src/components/styles/DashboardEvents.css
@@ -62,7 +62,7 @@ background-color: #133249;
 .pending-btn:hover {
     background: linear-gradient(0deg, rgb(189, 132, 62) 0%, rgb(172, 2, 82) 72%);
     border: none;
-    margin-right: 20px;
+    
 }
 .admin-reject-btn {
     background-color: #8fcf4f;
@@ -80,6 +80,27 @@ background-color: #133249;
     background-color: #8739a9;
     color: #e0e5e9;
 }
-
+.event-rounded-table {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 8px;
+    overflow: hidden; /* This ensures the rounded corners are visible */
+  }
+  
+  .event-rounded-table thead tr:first-child th:first-child {
+    border-top-left-radius: 8px;
+  }
+  
+  .event-rounded-table thead tr:first-child th:last-child {
+    border-top-right-radius: 8px;
+  }
+  
+  .event-rounded-table tbody tr:last-child td:first-child {
+    border-bottom-left-radius: 8px;
+  }
+  
+  .event-rounded-table tbody tr:last-child td:last-child {
+    border-bottom-right-radius: 8px;
+  }
 
 
