--- a/client/src/components/styles/DashboardEvents.css
+++ b/client/src/components/styles/DashboardEvents.css
@@ -1,5 +1,5 @@
 .chip-link {
-    background-color: #133249; 
+    background: linear-gradient(0deg, rgba(35,94,128,1) 9%, rgba(22,50,75,1) 96%); 
     color: #FCD46A;
     padding: 5px 10px;
     border-radius: 15px;
@@ -12,7 +12,7 @@
 
 
 .chip-link:hover {
-    background-color: #061119; 
+    background: linear-gradient(0deg, rgba(6,6,6,1) 9%, rgba(5,21,34,1) 96%); 
 }
 
 .centered-content {
