added venue drop to service list

--- a/client/src/components/styles/client/ServiceList.css
+++ b/client/src/components/styles/client/ServiceList.css
@@ -25,6 +25,11 @@
   margin: 0;
   padding: 0;
 }
+.venue-dropdown-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
 
 /* Body styles */
 /* body {
