--- a/client/src/components/styles/auth/Login.module.css
+++ b/client/src/components/styles/auth/Login.module.css
@@ -1,7 +1,7 @@
 .login-background-image {
     margin-top: 0;
    padding-bottom: 3rem;
-    padding-top: 60px; /* Adjust based on your navbar's height */
+    padding-top: 60px; 
   }
 
 .login-card {
@@ -11,8 +11,8 @@
     padding: 20px; 
     margin: 0 auto; 
     max-width: 500px;
-    position: relative; /* Add this line */
-    padding-bottom: 60px; /* Adjust this value as needed */
+    position: relative; 
+    padding-bottom: 60px; 
   }
   .login-card h3 {
     margin-top: 0;
