--- a/client/src/components/styles/auth/Login.module.css
+++ b/client/src/components/styles/auth/Login.module.css
@@ -4,12 +4,16 @@
     padding-top: 60px; 
   }
 
+  .login-card-ctn {
+    padding-top: 3rem;
+  }
 .login-card {
-    background-color: rgba(35,94,128,.6); 
+    background-color: rgba(35,94,128,.7); 
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     padding: 20px; 
     margin: 0 auto; 
+    margin-top: ;
     max-width: 500px;
     position: relative; 
     padding-bottom: 60px; 
