--- a/client/src/components/styles/client/ServiceList.css
+++ b/client/src/components/styles/client/ServiceList.css
@@ -47,6 +47,12 @@
     padding-top: 3rem;
     
 }
+.service-list-spinner-ctn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
 
 .cards-container {
     display: flex;
