--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   --dash-background-image: url('../src/assets/brown-blue-wood.jpg');
 
   --input-field-background: #201e19
+  --nav-bar-yellow: #FCD46A
 }
 body {
   margin: 0;
