--- a/client/src/components/styles/dash/UpdateEventAdmin.css
+++ b/client/src/components/styles/dash/UpdateEventAdmin.css
@@ -1,11 +1,24 @@
-select:focus, textarea:focus {
-    background-color: #201e19; /* Keeping the background consistent */
-    color: #d8a830; /* Ensuring text color remains yellow */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
-  }
+
   
   /* Placeholder color for textarea */
   textarea::placeholder {
     color: #d8a830; /* Yellow placeholder text */
+  }
+  #venueSelect:focus {
+    background-color: #201e19; /* Dark background */
+    color: #d8a830; /* Yellow text */
+    outline: 2px solid #d8a830; /* Custom outline color */
+    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+  }
+  #servicesMulti:focus {
+    background-color: #201e19; /* Dark background */
+    color: #d8a830; /* Yellow text */
+    outline: 2px solid #d8a830; /* Custom outline color */
+    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+  }
+  #description:focus {
+    background-color: #201e19; /* Dark background */
+    color: #d8a830; /* Yellow text */
+    outline: 2px solid #d8a830; /* Custom outline color */
+    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
   }
