--- a/client/src/styles/client/VenueList.css
+++ b/client/src/styles/client/VenueList.css
@@ -17,16 +17,14 @@ body {
 	text-rendering: optimizeLegibility;
 	font-weight: initial;
 }
-#pageHeaderTitle {
-    color: #FCD46A;
-}
+
 
 .dark {
 	background: #110f16;
 }
 
 .venue-background-image {
-    background-image: url('../../../assets/brown-blue-wood.jpg'); 
+    background-image: url('../../assets/brown-blue-wood.jpg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -45,8 +43,15 @@ a, a:hover {
 	transition: color 0.3s ease-in-out;
 }
 
+.venue-list-service-drop-ctn {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 1rem;
+}
+
 #pageHeaderTitle {
 	margin: 2rem 0;
+  color: #FCD46A;
 	/* text-transform: uppercase; */
 	text-align: center;
 	font-size: 2.5rem;
