--- a/client/src/styles/dash/CreateEventAdmin.css
+++ b/client/src/styles/dash/CreateEventAdmin.css
@@ -64,7 +64,7 @@ input[type="date"]:-webkit-autofill {
 }
 
 .dashboard-background {
-  background-image: url("../../../assets/brown-blue-wood.jpg");
+  background-image: url("../../assets/brown-blue-wood.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
