--- a/client/src/styles/DashboardEvents.css
+++ b/client/src/styles/DashboardEvents.css
@@ -63,6 +63,16 @@ background-color: #133249;
     background-color: #dda706;
     color: black;
 }
+.admin-approve-btn {
+    background-color: #014af4;
+    color: white;
+    border: none;
+}
+.admin-approve-btn:hover {
+    background-color: #014af4;
+    color: white;
+    border: none;
+}
 .pending-btn {
     background: linear-gradient(0deg, rgba(235,164,77,1) 0%, rgba(217,3,104,1) 72%);
     border: none;
