--- a/client/src/styles/dropdowns/VenueDropdown.css
+++ b/client/src/styles/dropdowns/VenueDropdown.css
@@ -14,7 +14,7 @@
     appearance: none;
     border: 0;
     outline: 0;
-    font: inherit;
+    font-size: large;
     /* Personalize */
     width: 20rem;
     padding: 1rem 4rem 1rem 1rem;
