--- a/client/src/styles/client/ServiceList.css
+++ b/client/src/styles/client/ServiceList.css
@@ -54,6 +54,12 @@
   align-items: center;
   margin-top: 24px;
 }
+.service-list-links {
+  color: #FCD46A;
+}
+.service-list-links:hover {
+  color: #a88e45;
+}
 
 .cards-container {
     display: flex;
@@ -78,6 +84,16 @@
     background-size: cover;
     
   }
+
+.blog-card .title-content h3 {
+  height: 4.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Limits the text to 2 lines */
+  -webkit-box-orient: vertical;
+  white-space: normal; /* Override if your default is nowrap */
+}
 
 
 
@@ -142,7 +158,7 @@
 hr {
   width: 50px;
   height: 3px;
-  margin: 20px auto;
+  margin: 10px auto;
   border: 0;
   background: #D0BB57;
 }
@@ -192,8 +208,8 @@ hr {
 /* Utility info styles */
 .utility-info {
   position: absolute;
-  bottom: 0px;
-  left: 0;
+  bottom: -20px;
+  left: -20px;
   z-index: 20;
 }
 
@@ -218,7 +234,8 @@ hr {
 .utility-list li.comments {
   background: url('../../assets/price-tag.png') no-repeat 0 .1em;
   background-size: 32px 32px; /* Example size, adjust as needed */
-    padding-left: 35px; /* Adjust padding to make room for the icon */
+  
+  padding-left: 35px; /* Adjust padding to make room for the icon */
 }
 
 /* Date icon styles */
