changed field color and refactored

--- a/client/src/styles/client/CreateEventCustomer.css
+++ b/client/src/styles/client/CreateEventCustomer.css
@@ -1,8 +1,8 @@
 #cust-create-descr:focus {
-    background-color: #201e19; /* Dark background */
-    color: #d8a830; /* Yellow text */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    background-color: #201e19; 
+    color: #FCD46A; 
+    outline: 2px solid #FCD46A;
+    box-shadow: 0 0 5px #FCD46A;
   }
 .customer-create-font h3 {
   font-size: 40px;
