--- a/client/src/styles/dash/UpdateVenue.css
+++ b/client/src/styles/dash/UpdateVenue.css
@@ -1,15 +1,14 @@
 select:focus, textarea:focus {
-    background-color: rgb(24, 21, 31); /* Keeping the background consistent */
-    color: #FCD46A; /* Ensuring text color remains yellow */
+    background-color: rgb(24, 21, 31); 
+    color: #FCD46A; 
   }
   
-  /* Placeholder color for textarea */
   textarea::placeholder {
-    color: #d8a830; /* Yellow placeholder text */
+    color: #FCD46A; 
   }
 #upd-venue-service-select:focus {
-    background-color: #201e19; /* Dark background */
-    color: #d8a830; /* Yellow text */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    background-color: #201e19; 
+    color: #FCD46A;
+    outline: 2px solid #FCD46A; 
+    box-shadow: 0 0 5px #FCD46A; 
   }
