--- a/client/src/styles/auth/Login.module.css
+++ b/client/src/styles/auth/Login.module.css
@@ -57,8 +57,8 @@ text-align: center;
   bottom: 0;
   left: 0;
   width: 100%;
-  text-align: center; /* This ensures the content is centered */
-  padding: 10px 0; /* Add padding to ensure it doesn't touch the very bottom */
+  text-align: center; 
+  padding: 10px 0; /* padding away from bottom */
 }
 
 .login-reg-ctn p {
@@ -71,9 +71,9 @@ text-align: center;
 }
 .container input:focus {
     background-color: #201e19;
-    outline: 2px solid #d8a830; /* Custom outline color */
-    color: #d8a830;
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    outline: 2px solid #FCD46A; 
+    color: #FCD46A;
+    box-shadow: 0 0 5px #FCD46A; 
 }
 .login-btn {
     background: linear-gradient(90deg, rgba(252,212,106,1) 0%, rgba(254,173,111,1) 90%);
