--- a/client/src/styles/dash/UpdateEventAdmin.css
+++ b/client/src/styles/dash/UpdateEventAdmin.css
@@ -1,24 +1,24 @@
 
   
-  /* Placeholder color for textarea */
+  /* Placeholder*/
   textarea::placeholder {
-    color: #d8a830; /* Yellow placeholder text */
+    color: #FCD46A;
   }
   #venueSelect:focus {
-    background-color: #201e19; /* Dark background */
-    color: #d8a830; /* Yellow text */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    background-color: #201e19; 
+    color: #FCD46A;
+    outline: 2px solid #FCD46A;
+    box-shadow: 0 0 5px #FCD46A;
   }
   #servicesMulti:focus {
-    background-color: #201e19; /* Dark background */
-    color: #d8a830; /* Yellow text */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    background-color: #201e19; 
+    color: #FCD46A; 
+    outline: 2px solid #FCD46A; 
+    box-shadow: 0 0 5px #FCD46A;
   }
   #description:focus {
-    background-color: #201e19; /* Dark background */
-    color: #d8a830; /* Yellow text */
-    outline: 2px solid #d8a830; /* Custom outline color */
-    box-shadow: 0 0 5px #d8a830; /* Optional: Adds a glow effect */
+    background-color: #201e19; 
+    color: #FCD46A;
+    outline: 2px solid #FCD46A; 
+    box-shadow: 0 0 5px #FCD46A;
   }
