--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,17 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Forum&family=Quattrocento&family=Stoke:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Forum&family=Quattrocento&family=Stoke:wght@300;400&display=swap");
 .feathered-edge {
-    mask-image: radial-gradient(circle, white, black);
+  mask-image: radial-gradient(circle, white, black);
 }
 .rounded-image {
-    border-radius: 35px; 
+  border-radius: 35px;
 }
 
-.home-container h2, p {
-    font-family: 'Stoke';
-    color: #FCD46A;
+.home-container h2,
+p {
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
+  color: #fcd46a;
 }
 .home-spinner-ctn {
-    display: flex;
-    justify-content: center;
-    padding-top: 10vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 10vh;
 }
