--- a/client/src/styles/client/ServiceList.css
+++ b/client/src/styles/client/ServiceList.css
@@ -1,7 +1,7 @@
 /* Font imports */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
-@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Forum&family=Quattrocento&family=Stoke:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Forum&family=Quattrocento&family=Stoke:wght@300;400&display=swap");
 /* Variables */
 .card-width {
   width: 350px;
@@ -10,13 +10,13 @@
   height: 500px;
 }
 .h-color {
-  color: #9CC9E3;
+  color: #9cc9e3;
 }
 .yellow {
-  color: #D0BB57;
+  color: #d0bb57;
 }
 .txt-color {
-  color: #DCE3E7;
+  color: #dce3e7;
 }
 
 /* Reset styles */
@@ -32,19 +32,15 @@
   margin-right: 30px;
 }
 
-
-
-
 .service-header {
-    text-align: center;
-    text-shadow: 0px 2px 16px #12110f;
-    
+  text-align: center;
+  text-shadow: 0px 2px 16px #12110f;
 }
 .service-header h1 {
-    color: #FCD46A;
-    font-family: 'Stoke';
-    padding-top: 3.4rem;
-    
+  color: #fcd46a;
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
+  padding-top: 3.4rem;
 }
 .service-list-spinner-ctn {
   display: flex;
@@ -53,35 +49,34 @@
   margin-top: 24px;
 }
 .service-list-links {
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .service-list-links:hover {
   color: #a88e45;
 }
 
 .cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px; /* Adjust the gap as needed */
-    padding: 20px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px; /* Adjust the gap as needed */
+  padding: 20px;
+}
 
 /* Blog card styles */
 .blog-card {
-    width: 350px;
-    height: 500px;
-    position: relative; 
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
-    text-align: center;
-    margin-bottom: 20px; /* Spacing between cards */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-  }
+  width: 350px;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  margin-bottom: 20px; /* Spacing between cards */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .blog-card .title-content h3 {
   height: 4.5rem;
@@ -93,8 +88,6 @@
   white-space: normal; /* Override if your default is nowrap */
 }
 
-
-
 /* Color overlay styles */
 .color-overlay {
   background: #54686e66;
@@ -104,15 +97,27 @@
   z-index: 10;
   top: 0;
   left: 0;
-  transition: background .3s cubic-bezier(.33, .66, .66, 1);
+  transition: background 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 
 /* Gradient overlay styles */
 .gradient-overlay {
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, .6) 21%);
-  background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, .6) 21%);
-  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, .6) 21%);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, .6) 21%);
+  background-image: -webkit-linear-gradient(
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.6) 21%
+  );
+  background-image: -moz-linear-gradient(
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.6) 21%
+  );
+  background-image: -o-linear-gradient(
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.6) 21%
+  );
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.6) 21%
+  );
   width: 350px;
   height: 500px;
   position: absolute;
@@ -140,16 +145,15 @@
   width: 100%;
   top: 0;
   left: 0;
-  
-  
 }
 
 .title-content h3 {
   font-size: 20px;
   font-weight: 500;
   letter-spacing: 2px;
-  color: #FCD46A;
-  font-family: 'Stoke';
+  color: #fcd46a;
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
   margin-bottom: 0;
 }
 
@@ -158,28 +162,26 @@ hr {
   height: 3px;
   margin: 10px auto;
   border: 0;
-  background: #D0BB57;
+  background: #d0bb57;
 }
 .image-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%; /* Same width as the card */
-    height: 100%; /* Same height as the card */
-    background: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
-    z-index: 10; /* Ensure it's above the background image but below the text content */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; /* Same width as the card */
+  height: 100%; /* Same height as the card */
+  background: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
+  z-index: 10; /* Ensure it's above the background image but below the text content */
 }
-
 
 .intro {
   width: 260px;
   margin: 0 auto;
-  color: #DCE3E7;
-  font-family: 'Droid Serif', serif;
+  color: #dce3e7;
+  font-family: "Droid Serif", serif;
   font-size: 14px;
   font-style: italic;
   line-height: 18px;
-  
 }
 
 /* Card info styles */
@@ -190,17 +192,16 @@ hr {
   left: 0;
   margin: 0 auto;
   padding: 0 50px;
-  color: #DCE3E7;
-  font-family: 'Stoke', serif;
+  color: #dce3e7;
+  font-family: "Stoke", serif;
   font-style: 16px;
   line-height: 24px;
   z-index: 20;
   opacity: 0;
-  transition: bottom .3s, opacity .3s cubic-bezier(.33, .66, .66, 1);
-  
+  transition: bottom 0.3s, opacity 0.3s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
 .card-info li {
-    list-style: none;
+  list-style: none;
 }
 
 /* Utility info styles */
@@ -224,18 +225,14 @@ hr {
   margin: 0 5px 0 0;
   padding: 2px 2px 10px 22px;
   display: inline-block;
-  color: #DCE3E7;
-  font-family: 'Roboto', sans-serif;
+  color: #dce3e7;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Comments icon styles */
 .utility-list li.comments {
-  background: url('../../assets/price-tag.png') no-repeat 0 .1em;
+  background: url("../../assets/price-tag.png") no-repeat 0 0.1em;
   background-size: 32px 32px; /* Example size, adjust as needed */
-  
+
   padding-left: 35px; /* Adjust padding to make room for the icon */
 }
-
-
-
-  
