--- a/client/src/styles/dash/CreateEventAdmin.css
+++ b/client/src/styles/dash/CreateEventAdmin.css
@@ -4,56 +4,57 @@ input[type="password"]:-webkit-autofill,
 input[type="email"]:-webkit-autofill,
 input[type="date"]:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 1000px #201e19 inset;
-  -webkit-text-fill-color: #FCD46A;
-  transition: background-color 5000s ease-in-out 0s; 
+  -webkit-text-fill-color: #fcd46a;
+  transition: background-color 5000s ease-in-out 0s;
 }
 .container input {
   background-color: #201e19;
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .container input::placeholder {
   background-color: #201e19;
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .container input:focus {
   background-color: #201e19;
-  outline: 2px solid #FCD46A; 
-  color: #FCD46A;
-  box-shadow: 0 0 5px #FCD46A; 
+  outline: 2px solid #fcd46a;
+  color: #fcd46a;
+  box-shadow: 0 0 5px #fcd46a;
 }
 .create-form-text {
-  color: #FCD46A;
-  font-family: "Stoke";
-  
+  color: #fcd46a;
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
   margin-top: 10px;
   text-shadow: 0px 2px 16px #12110f;
 }
 
 .container textarea::placeholder {
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .background .form-control {
   background-color: #201e19;
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .background .form-control::focus {
   background-color: #201e19;
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .form-control {
-  background-color: #201e19; 
-  color: #FCD46A; 
+  background-color: #201e19;
+  color: #fcd46a;
 }
 
 .dashboard-background .form-control::placeholder {
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .dashboard-background .form-control {
-  color: #FCD46A;
+  color: #fcd46a;
 }
 .error-message {
-  font-family: "Stoke";
-  color: #FCD46A;
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
+  color: #fcd46a;
 }
 
 .dashboard-background {
@@ -75,7 +76,8 @@ input[type="date"]:-webkit-autofill {
 
 .create-event-submit-btn {
   color: black;
-  font-family: "Stoke";
+  font-family: "Stoke", Georgia, "Times New Roman", Times, serif;
+
   background: linear-gradient(90deg, #2a7092 0%, #3a8eb8 90%);
 }
 input {
