--- a/client/src/styles/dropdowns/DateDropdown.css
+++ b/client/src/styles/dropdowns/DateDropdown.css
@@ -1,4 +1,4 @@
-/* Base styles for the dropdowns */
+
 .date-dropdown {
     width: 100%; 
     padding: 8px 12px;
@@ -8,7 +8,7 @@
     background-color: white;
     color: #333;
     font-size: 16px; 
-    margin-bottom: 10px; /* Spacing between dropdowns */
+    margin-bottom: 10px;
     background-color: #201e19; 
     color: #FCD46A;
 }
