--- a/client/src/styles/dash/UpdateService.css
+++ b/client/src/styles/dash/UpdateService.css
@@ -1,6 +1,6 @@
 #venueMulti:focus {
-    background-color: #201e19;
-    color: #FCD46A;
-    outline: 2px solid #FCD46A;
-    box-shadow: 0 0 5px #FCD46A;
-  }
+  background-color: #201e19;
+  color: #fcd46a;
+  outline: 2px solid #fcd46a;
+  box-shadow: 0 0 5px #fcd46a;
+}
