--- a/client/src/styles/client/CreateEventCustomer.css
+++ b/client/src/styles/client/CreateEventCustomer.css
@@ -1,9 +1,9 @@
 #cust-create-descr:focus {
-    background-color: #201e19; 
-    color: #FCD46A; 
-    outline: 2px solid #FCD46A;
-    box-shadow: 0 0 5px #FCD46A;
-  }
+  background-color: #201e19;
+  color: #fcd46a;
+  outline: 2px solid #fcd46a;
+  box-shadow: 0 0 5px #fcd46a;
+}
 .customer-create-font h3 {
   font-size: 40px;
   padding-top: 3rem;
