--- a/client/src/styles/client/MyEventsList.css
+++ b/client/src/styles/client/MyEventsList.css
@@ -1,37 +1,43 @@
 .postcard-my-venue-text {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .my-events-btn-container {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .my-events-btn-container Button {
-    background: linear-gradient(0deg, rgb(36, 149, 134) 0%,  rgb(36, 99, 148) 72%);
-    
-   
-    
-    color: black;
+  background: linear-gradient(0deg, rgb(36, 149, 134) 0%, rgb(36, 99, 148) 72%);
+
+  color: black;
 }
 .my-events-spinner-ctn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
 }
 .my-events-btn-container Button:hover {
-        background: linear-gradient(0deg, rgba(29,121,109,1) 0%,  rgba(29,81,121,1) 72%);
+  background: linear-gradient(
+    0deg,
+    rgba(29, 121, 109, 1) 0%,
+    rgba(29, 81, 121, 1) 72%
+  );
 
-    color: black;
+  color: black;
 }
 .my-events-btn-container :nth-child(2) {
-    background: linear-gradient(0deg, rgba(235,164,77,1) 0%, rgba(217,3,104,1) 72%);
+  background: linear-gradient(
+    0deg,
+    rgba(235, 164, 77, 1) 0%,
+    rgba(217, 3, 104, 1) 72%
+  );
 
-    /* background: #D90368; */
-    color: black;
+  /* background: #D90368; */
+  color: black;
 }
 .my-events-btn-container :nth-child(2):hover {
-    background: linear-gradient(0deg, rgb(210, 146, 69) 0%, rgb(188, 3, 89) 72%);
-    color: black;
+  background: linear-gradient(0deg, rgb(210, 146, 69) 0%, rgb(188, 3, 89) 72%);
+  color: black;
 }
