--- a/client/src/styles/dash/UpdateVenue.css
+++ b/client/src/styles/dash/UpdateVenue.css
@@ -1,14 +1,15 @@
-select:focus, textarea:focus {
-    background-color: rgb(24, 21, 31); 
-    color: #FCD46A; 
-  }
-  
-  textarea::placeholder {
-    color: #FCD46A; 
-  }
+select:focus,
+textarea:focus {
+  background-color: rgb(24, 21, 31);
+  color: #fcd46a;
+}
+
+textarea::placeholder {
+  color: #fcd46a;
+}
 #upd-venue-service-select:focus {
-    background-color: #201e19; 
-    color: #FCD46A;
-    outline: 2px solid #FCD46A; 
-    box-shadow: 0 0 5px #FCD46A; 
-  }
+  background-color: #201e19;
+  color: #fcd46a;
+  outline: 2px solid #fcd46a;
+  box-shadow: 0 0 5px #fcd46a;
+}
