--- a/client/src/styles/dropdowns/DateDropdown.css
+++ b/client/src/styles/dropdowns/DateDropdown.css
@@ -1,75 +1,70 @@
-
 .date-dropdown {
-    width: 100%; 
-    padding: 8px 12px;
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color: white;
-    color: #333;
-    font-size: 16px; 
-    margin-bottom: 10px;
-    background-color: #201e19; 
-    color: #FCD46A;
+  width: 100%;
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  color: #333;
+  font-size: 16px;
+  margin-bottom: 10px;
+  background-color: #201e19;
+  color: #fcd46a;
 }
-
 
 /* Hover effect */
 .date-dropdown:hover {
-    border-color: #888; 
+  border-color: #888;
 }
 
 /* Focus effect */
 .date-dropdown:focus {
-    outline: none;
-    border-color: #0056b3; 
-    box-shadow: 0 0 0 2px rgba(0, 86, 179, 0.2); 
+  outline: none;
+  border-color: #0056b3;
+  box-shadow: 0 0 0 2px rgba(0, 86, 179, 0.2);
 }
 
-
 .dropdown-container {
-    max-width: 300px; 
-    margin: auto;
+  max-width: 300px;
+  margin: auto;
 }
 
 .date-dropdown-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px; 
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .date-dropdown-row {
-    display: flex;
-    justify-content: space-between; 
-    width: 100%; 
-    margin-bottom: 10px; 
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .date-dropdown {
-    flex-basis: calc(50% - 5px); 
-   
+  flex-basis: calc(50% - 5px);
 }
 
 .duration-dropdown-container {
-    display: flex;
-    justify-content: center; 
-    margin-bottom: 10px; 
-    flex-direction: column;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .duration-dropdown {
-    width: auto; 
-    
-    padding: 8px 12px;
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color: white;
-    color: #333;
-    font-size: 16px; 
-    margin-bottom: 10px; 
-    background-color: #201e19; 
-    color: #FCD46A;
+  width: auto;
+
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  color: #333;
+  font-size: 16px;
+  margin-bottom: 10px;
+  background-color: #201e19;
+  color: #fcd46a;
 }
