--- a/client/src/styles/dropdowns/VenueDropdown.css
+++ b/client/src/styles/dropdowns/VenueDropdown.css
@@ -1,41 +1,38 @@
 :root {
-    --arrow-bg: rgba(19, 50, 73, 0.844);;
-    --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
-    --option-bg: rgb(43, 211, 220);
-    --select-bg:  rgba(24, 21, 31, .9);
+  --arrow-bg: rgba(19, 50, 73, 0.844);
+  --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
+  --option-bg: rgb(43, 211, 220);
+  --select-bg: rgba(24, 21, 31, 0.9);
+}
+* {
+  box-sizing: border-box;
+}
+
+.venue-dropdown-container select {
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font-size: large;
+
+  width: 20rem;
+  padding: 1rem 4rem 1rem 1rem;
+  background: var(--arrow-icon) no-repeat right 0.8em center / 1.4em,
+    linear-gradient(to left, var(--arrow-bg) 3em, var(--select-bg) 3em);
+  color: #fcd46a;
+  border-radius: 0.25em;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  /* Remove IE arrow */
+  &::-ms-expand {
+    display: none;
   }
-  * {
-    box-sizing: border-box;
+  /* Remove focus outline */
+  &:focus {
+    outline: none;
   }
 
-  
-  .venue-dropdown-container select {
-    
-    appearance: none;
-    border: 0;
-    outline: 0;
-    font-size: large;
-    
-    width: 20rem;
-    padding: 1rem 4rem 1rem 1rem;
-    background: var(--arrow-icon) no-repeat right 0.8em center / 1.4em,
-      linear-gradient(to left, var(--arrow-bg) 3em, var(--select-bg) 3em);
-    color: #FCD46A;
-    border-radius: 0.25em;
-    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    /* Remove IE arrow */
-    &::-ms-expand {
-      display: none;
-    }
-    /* Remove focus outline */
-    &:focus {
-      outline: none;
-    }
-    
-    option {
-      color: inherit;
-      background-color: var(--option-bg);
-    }
+  option {
+    color: inherit;
+    background-color: var(--option-bg);
   }
-  
+}
